--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.nexus">
 
+    <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES" />
     <application
 
         android:allowBackup="true"
@@ -37,6 +38,21 @@
             android:name=".LoginActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ProviderActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ClientActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".ProfileActivity"
+            android:exported="true">
+        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
@@ -49,6 +65,10 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 
 </manifest>
